--- a/package.json
+++ b/package.json
@@ -4,57 +4,69 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npm install --legacy-peer-deps && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.12",
-    "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.24.1",
-    "@tanstack/react-query-devtools": "^5.24.1",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.8",
-    "lucide-react": "^0.344.0",
-    "next": "^14.2.29",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.2.1",
+    "@auth/prisma-adapter": "1.0.12",
+    "@hookform/resolvers": "3.3.4",
+    "@prisma/client": "5.10.2",
+    "@radix-ui/react-accordion": "1.1.2",
+    "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-navigation-menu": "1.1.4",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-separator": "1.0.3",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
+    "@radix-ui/react-toast": "1.1.5",
+    "@tanstack/react-query": "5.24.1",
+    "@tanstack/react-query-devtools": "5.24.1",
+    "bcrypt": "5.1.1",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "cookie": "0.7.0",
+    "framer-motion": "11.0.8",
+    "lucide-react": "0.294.0",
+    "next": "14.2.29",
+    "next-auth": "4.24.5",
+    "next-sitemap": "4.2.3",
+    "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.50.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "react-hook-form": "7.50.1",
+    "tailwind-merge": "2.2.1",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
+    "@types/bcrypt": "5.0.2",
+    "@types/cookie": "0.6.0",
+    "@types/node": "20.11.24",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "prisma": "^5.10.2",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "autoprefixer": "10.4.17",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.29",
+    "postcss": "8.4.35",
+    "prisma": "5.10.2",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   },
-  "resolutions": {
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18"
+  "overrides": {
+    "cookie": "0.7.0",
+    "next": "14.2.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "postcss": "8.4.35",
+    "autoprefixer": "10.4.17",
+    "tailwindcss": "3.4.1",
+    "@auth/prisma-adapter": "1.0.12",
+    "next-auth": "4.24.5",
+    "eslint-config-next": "14.2.29"
   }
 }
