--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "clsx": "2.1.0",
     "cookie": "0.7.0",
     "framer-motion": "11.0.8",
-    "lucide-react": "0.294.0",
+    "lucide-react": "0.344.0",
     "next": "14.2.29",
     "next-auth": "4.24.5",
     "next-sitemap": "4.2.3",
@@ -67,6 +67,7 @@
     "tailwindcss": "3.4.1",
     "@auth/prisma-adapter": "1.0.12",
     "next-auth": "4.24.5",
-    "eslint-config-next": "14.2.29"
+    "eslint-config-next": "14.2.29",
+    "lucide-react": "0.344.0"
   }
 }
