--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -36,6 +36,7 @@
     "next-auth": "4.24.5",
     "next-sitemap": "4.2.3",
     "next-themes": "0.2.1",
+    "png-to-ico": "^2.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.50.1",
